@@ -30,7 +30,7 @@ extern class texture *water, *background, *gauge1,
 	*addleadangle, *torpempty, *torpreload, *torpunload, *uzo, *metalbackgr,
 	*torpt1, *torpt3, *torpt3fat, *torpt5, *torpt6lut, *torpt11, *clouds,
 	*clock12, *clock24, *glasses, *torp_expl_water_splash[3],
-	*woodbackgr, *smoke, *notepadsheet,
+	*woodbackgr, *smoke, *notepadsheet, *menuframe,
 	*repairlight, *repairmedium, *repairheavy, *repaircritical, *repairwrecked;
 extern class font *font_arial, *font_arial2, *font_ellis, *font_panel, *font_tahoma,
 	*font_nimbusrom;
